<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_gray"
    tools:context=".emergency.EmergencyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_call1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cv_call2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_call1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:contentDescription="@string/emergency"
                android:focusable="true"
                android:src="@drawable/hospital" />

            <TextView
                android:id="@+id/tv_call1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="80dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/ppsemibold"
                android:text="@string/hospital1"
                android:textColor="@color/granite_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_number1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="80dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/ppsemibold"
                android:text="@string/number1"
                android:textColor="@color/granite_gray"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_call1"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="90dp"
                android:fontFamily="@font/ppsemibold"
                android:text="@string/call"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_call2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/cv_call1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_call2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:contentDescription="@string/emergency"
                android:focusable="true"
                android:src="@drawable/hospital" />

            <TextView
                android:id="@+id/tv_call2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="80dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/hospital2"
                android:fontFamily="@font/ppsemibold"
                android:textSize="14sp"
                android:textColor="@color/granite_gray" />

            <TextView
                android:id="@+id/tv_number2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginStart="80dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/number2"
                android:fontFamily="@font/ppsemibold"
                android:textSize="14sp"
                android:textColor="@color/granite_gray" />

            <Button
                android:id="@+id/btn_call2"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="90dp"
                android:layout_marginStart="120dp"
                android:text="@string/call"
                android:fontFamily="@font/ppsemibold"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_call3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/cv_call2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_call3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:contentDescription="@string/emergency"
                android:focusable="true"
                android:src="@drawable/hospital" />

            <TextView
                android:id="@+id/tv_call3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="80dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/hospital3"
                android:fontFamily="@font/ppsemibold"
                android:textSize="14sp"
                android:textColor="@color/granite_gray" />

            <TextView
                android:id="@+id/tv_number3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginStart="80dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/number3"
                android:fontFamily="@font/ppsemibold"
                android:textSize="14sp"
                android:textColor="@color/granite_gray" />

            <Button
                android:id="@+id/btn_call3"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="90dp"
                android:layout_marginStart="120dp"
                android:text="@string/call"
                android:fontFamily="@font/ppsemibold"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_call4"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/cv_call3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_call4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:contentDescription="@string/emergency"
                android:focusable="true"
                android:src="@drawable/hospital" />

            <TextView
                android:id="@+id/tv_call4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="80dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/hospital4"
                android:fontFamily="@font/ppsemibold"
                android:textSize="14sp"
                android:textColor="@color/granite_gray" />

            <TextView
                android:id="@+id/tv_number4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginStart="80dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/number4"
                android:fontFamily="@font/ppsemibold"
                android:textSize="14sp"
                android:textColor="@color/granite_gray" />

            <Button
                android:id="@+id/btn_call4"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="90dp"
                android:layout_marginStart="120dp"
                android:text="@string/call"
                android:fontFamily="@font/ppsemibold"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_call5"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/cv_call4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_call5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:clickable="true"
                android:contentDescription="@string/emergency"
                android:focusable="true"
                android:src="@drawable/hospital" />

            <TextView
                android:id="@+id/tv_call5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="80dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/hospital5"
                android:fontFamily="@font/ppsemibold"
                android:textSize="14sp"
                android:textColor="@color/granite_gray" />

            <TextView
                android:id="@+id/tv_number5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginStart="80dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/number5"
                android:fontFamily="@font/ppsemibold"
                android:textSize="14sp"
                android:textColor="@color/granite_gray" />

            <Button
                android:id="@+id/btn_call5"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="90dp"
                android:layout_marginStart="120dp"
                android:text="@string/call"
                android:fontFamily="@font/ppsemibold"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>